# primitive

./: .gitignore  .gitmodules  LICENSE  README.md
data/mesh_model/: README.md
data/weights/: .gitignore
hand_gesture_primitives/: .gitignore  package.xml  setup.cfg  setup.py
hand_gesture_primitives/docs/: interfaces.md  primitives.md
hand_gesture_primitives/hand_gesture_primitives/: __init__.py  contact_config.py  contact_detection.py  contact_resolver.py  executor.py  fk_solver.py  gesture_engine.py  gesture_node.py  gesture_params.py  grasp_gate.py  grasp_mapping.py  hand_config.py  hand_profile.py  joint_state_bridge.py  label_utils.py  mesh_paths.py  mock_perception_node.py  primitive_base.py  primitive_catalog.py  topic_defaults.py  urdf_utils.py
hand_gesture_primitives/hand_gesture_primitives/config/: contact_thresholds.yaml  l25.yaml  o20.yaml  o6.yaml
hand_gesture_primitives/hand_gesture_primitives/primitives/: __init__.py  disk_by_vision.py  fist.py  hook_by_vision.py  index_middle_adduction_grip.py  index_pinch.py  index_pinch_by_vision.py  index_ring_by_vision.py  init_hand.py  large_wrap_by_vision.py  middle_pinch.py  middle_pinch_by_vision.py  middle_ring.py  middle_ring_by_vision.py  no_index_warp_by_vision.py  ok_sign.py  open_hand.py  palmar_by_vision.py  parallel_extension.py  parallel_extension_by_vision.py  pinch.py  point.py  relax_grip.py  release.py  ring.py  ring_by_vision.py  small_warp_by_vision.py  thumb_adduction_grip.py  tripod.py  tripod_by_vision.py  v_sign.py
hand_gesture_primitives/launch/: gesture_node.launch.py  test_with_mock.launch.py  view_hand_urdf.launch.py  view_hand_urdf.rviz
hand_gesture_primitives/test/: test_copyright.py  test_flake8.py  test_pep257.py
messages/robot_perception_msgs/: CMakeLists.txt  package.xml
messages/robot_perception_msgs/msg/: LabeledBBox2D.msg  LabeledBBox2DArray.msg  LabeledBBox3D.msg  LabeledBBox3DArray.msg  LabeledPoseArray.msg  SurfaceMesh.msg  SurfaceMeshArray.msg  WorkbenchPlane.msg
perception/: environment.yml  environment_vlm.yml  package.xml  readme.md  setup.py  sync_env.sh
perception/config/: models_offline.example.yaml  scene_understand_prompts.yaml  scene_understand_prompts.zh.yaml
perception/config/calib_results/: full_calibration_result.txt
perception/config/pixel3d/: install_offline.sh  pipeline.offline.example.json  pixel3d_offline.example.json
perception/docs/: output_topics.md
perception/launch/: detection_bbox.launch.py
perception/robot_perception/: constants.py  detection_bbox_node.py  ros_defaults.py
perception/robot_perception/utils/: bbox3d_from_depth.py  bbox_association.py  bbox_track_manager.py  calib_loader.py  cutie_track.py  gdino_sam.py  paths.py  pixel3d_mesh.py  point_filter.py  rviz_markers.py  scene_prompt_config.py  scene_understand.py  static_tf.py  stereo_depth.py  surface_mesh.py  tag_mapping.py  vlm_detector.py  workbench_plane.py  world_roi.py
perception/rviz/: detection_bbox.rviz
perception/scripts/: build_perception.sh  deploy_pixel3d_config.sh  perception_env.sh  run_detection_bbox.sh  setup_vlm_env.sh  start_minicpm_vlm_server.sh  stop_vlm_server.sh  sync_env_vlm.sh  sync_minicpm_weights.sh
scripts/: build_perception.sh  run_camera.sh  run_perception.sh
sensors/OrbbecSDK_ROS2/: README.MD  README_CN.MD
sensors/OrbbecSDK_ROS2/orbbec_camera/: CMakeLists.txt  package.xml
sensors/OrbbecSDK_ROS2/orbbec_camera_msgs/: CMakeLists.txt  package.xml
sensors/OrbbecSDK_ROS2/orbbec_description/: package.xml
(+50 files in other folders)
