<?xml version="1.0"?>
<package format="3">
  <name>robot_perception</name>
  <version>0.1.0</version>
  <description>ROS2 perception: GDINO/SAM/Stereo bbox detection with open-vocabulary tracking</description>
  <maintainer email="opensource@linkerbot.ai">LinkerHand Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_perception_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
