<?xml version="1.0"?>
<package format="3">
  <name>robot_perception_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages for robot_perception</description>
  <maintainer email="opensource@linkerbot.ai">LinkerHand Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
